--- a/express-starter-8.6.0/express-project-starter/views/sign-up.pug
+++ b/express-starter-8.6.0/express-project-starter/views/sign-up.pug
@@ -1,21 +1,24 @@
-extends layout.pug 
+extends layout.pug
 
 block content
     a(href='/log-in') Log in
     div.sign-up-form
         h2 Sign up for free
         if errors 
-            p Sorry, that wasn't a valid log-in. Please try again.
+            each error in errors
+                p= error
         form(action='/signup' method='post')
             input(type='hidden' name='_csrf' value=csrfToken)
-            label(for='firstName') First Name 
+            label(for='firstName') First Name
             input(type='text' name='firstName' value=user.firstName placeholder='First Name')
-            label(for='lastName') Last Name 
+            label(for='lastName') Last Name
             input(type='text' name='lastName' value=user.lastName placeholder='Last Name')
             label(for='email') Email
             input(type='email' name='email' value=user.email placeholder='Email')
-            label(for='username') Username 
+            label(for='username') Username
             input(type='text' name='username' value=user.username placeholder='Username')
-            label(for='password') Password 
+            label(for='password') Password
             input(type='password' name='password' value=user.password placeholder='Password')
+            label(for='confirmPassword') Confirm Password
+            input(type='password' name='confirmPassword' value=user.confirmPassword placeholder='Password')
             button Sign up!
