fixed login and signup pug paths, render user/login

--- a/express-starter-8.6.0/express-project-starter/views/sign-up.pug
+++ b/express-starter-8.6.0/express-project-starter/views/sign-up.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content
     div
-        a(href='/user/log-in') Log in
+        a(href='/user/login') Log in
     div.sign-up-form
         h2 Sign up for free
         if errors
