--- a/express-starter-8.6.0/express-project-starter/views/layout.pug
+++ b/express-starter-8.6.0/express-project-starter/views/layout.pug
@@ -3,6 +3,6 @@ html
   head
       block head
         title= title
-        link(rel='stylesheet' href='/stylesheets/reset.css')
+        link(rel='stylesheet' href='/stylesheets/index.css')
   body
     block content
