updated pw placeholder and started css file

--- a/express-starter-8.6.0/express-project-starter/views/log-in.pug
+++ b/express-starter-8.6.0/express-project-starter/views/log-in.pug
@@ -11,5 +11,5 @@ block content
             label(for='emailOrUsername') Email or username
             input(type='text' name='emailOrUsername' value=emailOrUsername placeholder='Email or username')
             label(for='password') Password
-            input(type='password' name='password' value=password placeholder='Password')
+            input(type='password' name='password' value=password placeholder='Password (case sensitive)')
             button Log in
