--- a/express-starter-8.6.0/express-project-starter/views/sign-up.pug
+++ b/express-starter-8.6.0/express-project-starter/views/sign-up.pug
@@ -19,7 +19,7 @@ block content
             label(for='username') Username
             input(type='text' name='username' value=user.username placeholder='Username')
             label(for='password') Password
-            input(type='password' name='password' value=user.password placeholder='Password')
+            input(type='password' name='password' value=user.password placeholder='Password (case sensitive)')
             label(for='confirmPassword') Confirm Password
             input(type='password' name='confirmPassword' value=user.confirmPassword placeholder='Confirm Password')
             button Sign up!
