--- a/express-starter-8.6.0/express-project-starter/views/homepage.pug
+++ b/express-starter-8.6.0/express-project-starter/views/homepage.pug
@@ -1,14 +1,17 @@
 extends layout.pug
-​
+
 block content
     div(id="navbar")
         input.searchbar(type='search' value placeholder='Search any task')
         button(id="logoutbutton")
     div(id="mainContent")
         div(id="left-section")
-            a(href="" id ="logo")
+            img(src="../images/logo.jpeg" id ="logo")
+            div.add-list-input
+                input(class='add-list' type='text' placeholder='Add new list...' value)
+                button(class='api-button' id='add-list-button') Add List
             each list in lists
-                div= list.name
+                div.list-of-lists= list.listName
         div(id="middle-section")
             ul(class='task-index')
                 li#task-list-header Type in a task.
@@ -26,7 +29,7 @@ block content
                         select(name='list' class='list-dropdown' data-hover-label='list')
                             each list in lists
                                 option(value=list.id)= list.listName
-                    button(class='api-button') Add Task
+                    button(class='api-button' id='add-task-button') Add Task
                 each task in tasks
                     li#task-row= task.taskName
                         //- a(class=task.taskName href='')
@@ -42,5 +45,5 @@ block content
                         p#time-left
                         p.summary-label Time Left
                     .completed-tasks
-                        p#done-tasks 
+                        p#done-tasks
                         p.summary-label Completed
