--- a/express-starter-8.6.0/express-project-starter/views/homepage.pug
+++ b/express-starter-8.6.0/express-project-starter/views/homepage.pug
@@ -8,8 +8,9 @@ block content
         div(id="left-section")
             img(src="../images/logo.jpeg" id ="logo")
             div.add-list-input
-                input(class='add-list-value' type='text' placeholder='Add new list...' value)
-                button(class='api-button' id='add-list-button') Add List
+                form#new-list(action='lists/new' method='post')
+                    input(class='add-list-value' type='text' placeholder='Add new list...' value)
+                    button(class='api-button' id='add-list-button') Add List
             each list in lists
                 div.list-of-lists= list.listName
         div(id="middle-section")
