--- a/express-starter-8.6.0/express-project-starter/views/homepage.pug
+++ b/express-starter-8.6.0/express-project-starter/views/homepage.pug
@@ -3,7 +3,7 @@ extends layout.pug
 block content
     div(id="navbar")
         input.searchbar(type='search' value placeholder='Search any task')
-        button(id="logoutbutton")
+        a(id="logout" href='/user/logout') Logout
     div(id="mainContent")
         div(id="left-section")
             img(src="../images/logo.jpeg" id ="logo")
