demo login started

--- a/express-starter-8.6.0/express-project-starter/views/log-in.pug
+++ b/express-starter-8.6.0/express-project-starter/views/log-in.pug
@@ -13,3 +13,6 @@ block content
             label(for='password') Password
             input(type='password' name='password' value=password placeholder='Password (case sensitive)')
             button Log in
+    span OR
+    .demo-user
+        button(id='demo-user') Demo Login 
