most recent version with all folder changes for heroku fixed, added demo user functionality

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,3 +6,5 @@ html
         link(rel='stylesheet' href='/stylesheets/index.css')
   body
     block content
+
+    script(src="/javascripts/index.js")
