--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -9,10 +9,9 @@ block content
         form(action='/user/login' method='post')
             input(type='hidden' name='_csrf' value=csrfToken)
             label(for='emailOrUsername') Email or username
-            input(type='text' name='emailOrUsername' value=emailOrUsername placeholder='Email or username')
+            input(type='text' name='emailOrUsername' id='creds-input' value=emailOrUsername placeholder='Email or username')
             label(for='password') Password
-            input(type='password' name='password' value=password placeholder='Password (case sensitive)')
-            button Log in
-    span OR
-    .demo-user
-        button(id='demo-user') Demo Login 
+            input(type='password' name='password' id='pw-input' value=password placeholder='Password (case sensitive)')
+            button Log In
+            hr
+            button(id='demo-user') Demo Log In
