--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -3,6 +3,7 @@ extends layout.pug
 block content
     div(id="navbar")
         input.searchbar(type='search' value placeholder='Search any task')
+        button(id="searchbutton") Search
         a(id="logout" href='/user/logout') Logout
     div(id="mainContent")
         div(id="left-section")
