--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,11 +1,41 @@
-html, body {
+/* html, body {
     margin: 0;
     font-family: sans-serif;
     padding: 0px;
-    background-color: #6e6e6e;
+    background-color: #969696;
 }
 
+#navbar {
+    background-color: royalblue;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    height: 64px;
+    margin: 0px;
+    padding: 0px 24px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#search-icon {
+    height: 22px;
+}
+
+#logout {
+    color: white;
+    text-decoration: none;
+    margin-right: 50px;
+    padding: 3px;
+    background-color: #969696;
+    border-radius: 20%;
+}
 
 h1 {
     color: #555555;
 }
+
+#main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+} */
