--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -10,6 +10,7 @@ block content
             img(src="../images/logo.jpeg" id ="logo")
             div.add-list-input
                 form#new-list(action='/lists/new' method='post')
+                    input(type='hidden' name="_csrf" value=csrfToken)
                     input(class='add-list-value' type='text' name='listName' placeholder='Add new list...' value=listName)
                     button(class='api-button' id='add-list-button') Add List
             each list in lists
