--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -27,7 +27,10 @@ block content
                             option(value='10') 10 Minutes
                             option(value='15') 15 Minutes
                             option(value='30') 30 Minutes
+                            option(value='45') 45 Minutes
                             option(value='60') 1 Hour
+                            option(value='120') 2 Hours
+                            option(value='180') 3 Hours
                             option(value='1440') 1 Day
                         select(name='list' class='list-dropdown' data-hover-label='list')
                             each list in lists
@@ -35,6 +38,7 @@ block content
                     button(class='api-button' id='add-task-button') Add Task
                 each task in tasks
                     li#task-row= task.taskName
+                        div(id='task-time' class=task.taskTime)
                         //- a(class=task.taskName href='')
                         //- span= task.taskName
         div(id="right-section")
