--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -11,7 +11,7 @@ block content
             div.add-list-input
                 form#new-list(action='/lists/new' method='post')
                     input(type='hidden' name="_csrf" value=csrfToken)
-                    input(class='add-list-value' type='text' name='listName' placeholder='Add new list...' value=listName)
+                    input(class='add-list-value' type='text' name='listName' placeholder='Add new list...')
                     button(class='api-button' id='add-list-button') Add List
             each list in lists
                 div.list-of-lists= list.listName
@@ -19,20 +19,21 @@ block content
             ul(class='task-index')
                 li#task-list-header Type in a task.
                 li#add-task-form
-                    form#new-task
-                        input(class='new-task-input' type='text' placeholder='Add new task...' value)
-                    div#property-buttons
-                        select(name='time-estimate' class='time-dropdown' data-hover-label='time-estimate')
-                            option(value='5') 5 Minutes
-                            option(value='10') 10 Minutes
-                            option(value='15') 15 Minutes
-                            option(value='30') 30 Minutes
-                            option(value='60') 1 Hour
-                            option(value='1440') 1 Day
-                        select(name='list' class='list-dropdown' data-hover-label='list')
-                            each list in lists
-                                option(value=list.id)= list.listName
-                    button(class='api-button' id='add-task-button') Add Task
+                    form#new-task(action='/tasks/new' method='post')
+                        input(type='hidden' name="_csrf" value=csrfToken)
+                        input(class='new-task-input' type='text' name='taskName' placeholder='Add new task...')
+                        div#property-buttons
+                            select(name='time-estimate' class='time-dropdown' data-hover-label='time-estimate')
+                                option(value='5') 5 Minutes
+                                option(value='10') 10 Minutes
+                                option(value='15') 15 Minutes
+                                option(value='30') 30 Minutes
+                                option(value='60') 1 Hour
+                                option(value='1440') 1 Day
+                            select(name='list' class='list-dropdown' data-hover-label='list')
+                                each list in lists
+                                    option( value= list.id )= list.listName
+                        button(class='api-button' id='add-task-button') Add Task
                 each task in tasks
                     li#task-row= task.taskName
                         //- a(class=task.taskName href='')
