--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -62,10 +62,6 @@ html, body {
     align-items: center;
 }
 
-#add-task-form{
-    border-bottom: 2px black solid;
-}
-
 #task-list-header {
     display: flex;
 }
@@ -78,6 +74,10 @@ html, body {
 #task-row{
     border-bottom: 2px black;
     padding: 5px;
+}
+
+#property-buttons{
+    display:flex;
 }
 
 .summary-of-tasks{
