--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -1,9 +1,12 @@
 extends layout.pug
 
 block content
-    div
+    link(rel='stylesheet' href='/stylesheets/log-in.css')
+    <div class="split left">
+        h1(id="header")="Don't Forget The Baby"   
+    <div class="split right">
         a(href='/user/login') Log in
-    div.sign-up-form
+        div.sign-up-form
         h2 Sign up for free
         if errors
             each error in errors
