Red delete button added

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -118,3 +118,13 @@ h1 {
 #task-time{
     display: inline;
 }
+
+#deleteButton {
+    padding-left: 10px;
+    height: 15px;
+    width: auto;
+}
+
+#task-row{
+    margin: 5px
+}
