--- a/public/stylesheets/log-in.css
+++ b/public/stylesheets/log-in.css
@@ -1,5 +1,19 @@
 .log-in-form {
-  float: right;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 126px 10px 0;
+  display: block;
+  margin-top: 0em;
+  padding-bottom: 40px;
+  width: 50%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  display: block;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 body {
@@ -30,7 +44,7 @@ body {
 
 #creds-input {
   display: block;
-  width: 100%;
+  width: 50%;
   height: 36px;
   padding: 6px 12px;
   font-size: 16px;
@@ -39,7 +53,7 @@ body {
   background-color: #fff;
   background-image: none;
   border: 1px solid #ccc;
-  border-radius: 3px;
+  /* border-radius: 3px; */
   -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
   box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
   -webkit-transition: border-color ease-in-out 0.15s,
@@ -56,23 +70,25 @@ body {
   text-indent: 0px;
   text-shadow: none;
   display: inline-block;
-  text-align: start;
   appearance: auto;
   -webkit-rtl-ordering: logical;
   cursor: text;
   background-color: -internal-light-dark(rgb(255, 255, 255), rgb(59, 59, 59));
   margin: 0em;
   padding: 1px 2px;
-  border-width: 2px;
-  border-style: inset;
+  /* border-width: 2px; */
+  /* border-style: inset; */
   border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
   border-image: initial;
   box-sizing: border-box;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
 }
 
 #pw-input {
   display: block;
-  width: 100%;
+  width: 50%;
   height: 36px;
   padding: 6px 12px;
   font-size: 16px;
@@ -89,36 +105,32 @@ body {
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   box-sizing: border-box;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
 }
 
 button {
   margin-top: 19px;
   height: 48px;
   font-size: 20px;
-  border-radius: 4px;
   font-family: MuseoSansRounded, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  display: block;
-  width: 100%;
+  width: 50%;
   padding: 10px 12px;
-  font-size: 23px;
   line-height: 1.3333333;
   border-radius: 3px;
   color: #fff;
   background-color: #009dff;
   border-color: transparent;
-  display: inline-block;
   margin-bottom: 0;
-  font-weight: 700;
-  text-align: center;
+  font-weight: 0;
   white-space: nowrap;
   touch-action: manipulation;
   cursor: pointer;
   background-image: none;
   border: 1px solid transparent;
-  padding: 6px 12px;
-  font-size: 16px;
+  /* padding: 6px 12px; */
   line-height: 1.42857143;
-  border-radius: 3px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -150,4 +162,29 @@ button {
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
   -webkit-tap-highlight-color: transparent;
+  margin: 0 auto;
+  display: block;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  justify-content: space-around;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+#demo-user {
+  margin: 0 auto;
+  display: block;
+}
+
+#header {
+  text-align: center;
+  color: white;
 }
