--- a/public/stylesheets/sign-up.css
+++ b/public/stylesheets/sign-up.css
@@ -18,11 +18,6 @@ body {
   background-color: #0060bf;
 }
 
-.split {
-  color: white;
-  font-weight: bolder;
-}
-
 /* Control the right side */
 .right {
   right: 0;
@@ -33,8 +28,7 @@ body {
   color: white;
 }
 
-#creds-input {
-  display: block;
+/* #form {
   width: 100%;
   height: 36px;
   padding: 6px 12px;
@@ -60,8 +54,7 @@ body {
   text-transform: none;
   text-indent: 0px;
   text-shadow: none;
-  display: inline-block;
-  text-align: start;
+  text-align: center;
   appearance: auto;
   -webkit-rtl-ordering: logical;
   cursor: text;
@@ -73,10 +66,10 @@ body {
   border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
   border-image: initial;
   box-sizing: border-box;
-}
+  display: inline; */
+/* } */
 
 #pw-input {
-  display: block;
   width: 100%;
   height: 36px;
   padding: 6px 12px;
@@ -94,6 +87,8 @@ body {
   -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   box-sizing: border-box;
+  text-align: center;
+  display: inline;
 }
 
 button {
@@ -102,18 +97,16 @@ button {
   font-size: 20px;
   border-radius: 4px;
   font-family: MuseoSansRounded, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  display: block;
-  width: 100%;
-  padding: 10px 12px;
+  width: 50%;
+  /* padding: 10px 12px; */
   font-size: 23px;
   line-height: 1.3333333;
   border-radius: 3px;
   color: #fff;
   background-color: #009dff;
   border-color: transparent;
-  display: inline-block;
   margin-bottom: 0;
-  font-weight: 700;
+  font-weight: 0;
   text-align: center;
   white-space: nowrap;
   touch-action: manipulation;
@@ -140,8 +133,6 @@ button {
   text-transform: none;
   text-indent: 0px;
   text-shadow: none;
-  display: inline-block;
-  text-align: center;
   align-items: flex-start;
   cursor: default;
   box-sizing: border-box;
@@ -155,4 +146,75 @@ button {
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
   -webkit-tap-highlight-color: transparent;
+  margin: 0 auto;
+  display: block;
+}
+
+/* #sign-up-form {
+  float: left;
+} */
+
+#firstname {
+  /* text-align: center; */
+  position: absolute;
+  left: 34.3%;
+  width: 80%;
+  top: 230px;
+  /* margin: 0 auto;
+   display: block; */
+}
+
+#lastname {
+  /* text-align: center; */
+  position: absolute;
+  left: 34.5%;
+  width: 80%;
+  top: 255px;
+  /* margin: 0 auto;
+  display: block; */
+}
+
+#email {
+  /* text-align: center; */
+  position: absolute;
+  left: 37.8%;
+  width: 80%;
+  top: 280px;
+  /* margin: 0 auto;
+   display: block; */
+}
+
+#username {
+  /* text-align: center; */
+  position: absolute;
+  left: 35%;
+  width: 80%;
+  top: 305px;
+  /* margin: 0 auto;
+   display: block; */
+}
+
+#pw {
+  /* text-align: center; */
+  position: absolute;
+  left: 35.5%;
+  width: 80%;
+  top: 330px;
+  /* margin: 0 auto;
+  display: block; */
+}
+
+#confirm-pw {
+  /* text-align: center; */
+  position: absolute;
+  left: 29%;
+  width: 75%;
+  top: 355px;
+  /* margin: 0 auto; */
+  display: block;
+}
+
+#signup {
+  position: relative;
+  top: 300px;
 }
