--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -1,14 +1,16 @@
-extends layout.pug
+
 
 block content
     link(rel='stylesheet' href='/stylesheets/log-in.css')
     div(class="split left")
+        h1(id="header")="Don't Forget The Baby"  
     div(class="split right")
          h2 Been here before? Welcome back!
          div.log-in-form
             if errors
              p Sorry, that wasn't a valid log in. Please try again.
          form(action='/user/login' method='post')
+            div(id="form")
                 input(type='hidden' name='_csrf' value=csrfToken)
                 label(for='emailOrUsername') Email or username
                 input(type='text' name='emailOrUsername' id='creds-input' value=emailOrUsername placeholder='Email or username')
