--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -20,3 +20,4 @@ block content
                 hr
                 button(id='demo-user') Demo Log In
                 a(href='/user/signup') Don't have an account? Sign up here.
+     script(type="module" src="../public/javascripts/index.js")
