--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -58,5 +58,6 @@ block content
                     .completed-tasks
                         p.summary-label Completed
                         p#done-tasks
-
+    
+    script(type="module" src="../public/javascripts/index.js")
 
