--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,4 +7,4 @@ html
   body
     block content
 
-       script(type="module" src="../public/javascripts/index.js")
+       script(type="module" src="/javascripts/index.js")
