--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,4 +6,4 @@ html
         link(rel='stylesheet' href='/stylesheets/index.css')
   body
     block content
-      script(type="module" src="/javascripts/index.js")
+      script(src="/javascripts/index.js")
