--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -23,3 +23,4 @@ block content
             label(for='confirmPassword') Confirm Password
             input(type='password' name='confirmPassword' value=user.confirmPassword placeholder='Confirm Password')
             button Sign up!
+    img(src="/images/dftb.png" id ="signupLogo")
